--- a/recipeSearch.html
+++ b/recipeSearch.html
@@ -1,16 +1,10 @@
-<style type="text/css">
-	
-/*Inputs Styles*/
-/*@media only screen and (min-device-width : 320px) and (max-device-width : 480px) { *start of style sheet for mobile
-}*/
-</style>
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 	<meta charset="UTF-8">
 	<title>Recipe Search</title>
 </head>
@@ -22,11 +16,9 @@
 <!-- FireBase and Script Start -->
 
 <script src="https://www.gstatic.com/firebasejs/4.0.0/firebase.js"></script>
-<script type="text/javascript">
+<script type="text/javascript" src="javascript/app.js">
 	
-$("#click").on("click",function(){
-	alert("asd");
-});
+
 
 </script>
 </body>
