--- a/recipeSearch.html
+++ b/recipeSearch.html
@@ -32,7 +32,7 @@
     </nav>
     <div class="container">
         <div class="row">
-            <div class="col s3 follow">
+            <div class="col s12 m3 l3 follow">
                 <div class="card">
                     <div id="bar" class="card-content">
                         <div id="h1">Ingredients I have</div>
@@ -66,7 +66,7 @@
                 </div>
                 <!-- Grey navigation panel -->
             </div>
-            <div id="recipeColumn" class="col s9">
+            <div id="recipeColumn" class="col s12 m9 l9">
                 <div id="h3">Recipes</div>
                 <div id="recipeCards">
                 	
