New search working file

--- a/recipeSearch.html
+++ b/recipeSearch.html
@@ -63,6 +63,10 @@
                                 </ul>
                                 <div class="card-action center">
                                     <a id="recipeButton" href="#">What Can I Make?</a>
+
+                                </div>
+                                <div>
+                                <a id="resetButton" href="#">New Search</a>
                                 </div>
                             </div>
                         </div>
@@ -70,6 +74,8 @@
                 </div>
                 <!-- Grey navigation panel -->
             </div>
+            
+            
             <div id="recipeColumn" class="col s12 m9 l9">
                 <div id="h3">Recipes</div>
                 <div id="recipeCards">
