--- a/recipeSearch.html
+++ b/recipeSearch.html
@@ -13,12 +13,6 @@
 </head>
 
 <body>
-    <div id="modal1" class="modal">
-        <div class="modal-content">
-            <h1>Google Maps</h1>
-        </div>
-        <p>This is where the map will go</p>
-    </div>
     <!-- Dropdown Structure -->
     <ul id="dropdown1" class="dropdown-content">
         <li><a href="https://www.linkedin.com/in/patrick-o-hara-8b959b136/">Patrick</a></li>
@@ -63,10 +57,10 @@
                                 </ul>
                                 <div class="card-action center">
                                     <a id="recipeButton" href="#">What Can I Make?</a>
-
                                 </div>
                                 <div>
-                                <a id="resetButton" href="#">New Search</a>
+                                    <!-- <center> <a id="resetButton" href="#">New Search</a></center> -->
+                                    <p><a href="map.html" target="_blank" class="btn-floating btn-small waves-effect waves-light green"><i class="material-icons">location_on</i></a><a id="resetButton" class="btn-floating btn-small waves-effect waves-light green"><i class="material-icons">replay</i></a></p>
                                 </div>
                             </div>
                         </div>
@@ -74,8 +68,6 @@
                 </div>
                 <!-- Grey navigation panel -->
             </div>
-            
-            
             <div id="recipeColumn" class="col s12 m9 l9">
                 <div id="h3">Recipes</div>
                 <div id="recipeCards">
