--- a/map.html
+++ b/map.html
@@ -102,7 +102,7 @@ text-align: center;
             <h1>Find Your Local Grocery Store</h1>
           
             <div>
-                
+                <center><span class="text">Search for nearby places</span></center>
                 <input id="places-search" type="text" placeholder="Ex: Pizza delivery in NYC">
                 <input id="go-places" type="button" value="Go">
             </div>
@@ -702,7 +702,8 @@ text-align: center;
         });
     }
     </script>
-   
+    <script async defer src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry,drawing&key=AIzaSyCtrVeRVxmDFCd1UxfjOF5tt0Z1tvhR0ho&v=3&callback=initMap">
+    </script>
 </body>
 
 </html>
