--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </nav>
     <div class="container">
         <div class="row">
-            <div class="col s12 m3 l3 follow">
+            <div id="overflow" class="col s12 m3 l3 follow">
                 <div class="card">
                     <div id="bar" class="card-content">
                         <div id="h1">Ingredients I have</div>
@@ -43,7 +43,7 @@
                                     <span class="input-group-btn">
       <a id="ingredientAdd" class="btn-floating btn-small waves-effect waves-light green"><i class="material-icons">add</i></a>
       </span>
-                                    <input id="ingredientInput" type="text" class="form-control" placeholder="What ingredients do you have?">
+                                    <input id="ingredientInput" type="text" class="form-control" placeholder="Enter up to 5 items">
                                 </div>
                             </div>
                         </div>
