--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </ul>
     <nav>
         <div class="nav-wrapper">
-            <div id="logo">Recipe Search
+            <div id="logo">Pantry Chef
                 <ul class="right hide-on-down">
                     <!-- Dropdown Trigger -->
                     <li><a class="dropdown-button" href="#" data-activates="dropdown1"><i class="material-icons left">perm_identity</i></a></li>
