--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                     <span class="input-group-btn">
       <a id="ingredientAdd" class="btn-floating btn-small waves-effect waves-light green"><i class="material-icons">add</i></a>
       </span>
-                                    <input id="ingredientInput" type="text" class="form-control" placeholder="Enter up to 5 items">
+                                    <input id="ingredientInput" type="text" class="form-control" placeholder="Enter ingredients you have!">
                                 </div>
                             </div>
                         </div>
